# PosterAudit

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  build.sh  build.spec  build_linux.sh  build_mac.sh  build_windows.bat  celery_app.py  docker-compose.web.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
config/: .gitkeep  brand_rules.json
data/audit_history/: batch_20260324_161932_fd545c.json  batch_20260324_165257_cf16fa.json  batch_20260324_174006_c9c64e.json  batch_20260325_110350_0baaf7.json  history_index.json  single_20260324_152348_20260323-105800.json  single_20260324_152348_20260323-105807.json  single_20260324_165032_970c90.json  single_20260325_102420_41fd89.json
data/exports/: audit_report_20260324_151105.md  audit_report_20260324_152348.md  batch_report_20260324_162726.json  history_export_20260324_165040.md  history_export_20260324_165516.md  history_export_20260324_174520.md  history_export_20260325_102443.md  history_export_20260325_110400.md
data/uploads/: 品牌规范测试.docx  品牌规范测试.md  品牌规范测试.txt  品牌规范测试.xlsx
docker/: nginx.conf  web.dockerfile
docs/: GitHub-Actions使用说明.md  command.md  error.md  github.md  uv2026.md  web_search.md  前端优化方案.md  数据流程.md  速度优化方案.md
frontend/: api_client.py  app.py  config.py
frontend/pages/: __init__.py  audit.py  brands.py  history.py  settings.py
gui/: __init__.py  main_window.py
gui/pages/: __init__.py  audit_page.py  history_page.py  rules_page.py  settings_page.py
gui/utils/: __init__.py  responsive.py  worker.py
gui/widgets/: __init__.py  image_drop_area.py  progress_panel.py  streaming_text_display.py
prompt/: image_audit.md  image_audit_batch.md  rule_parse.md  rule_parse_compact.md
scripts/: backendctl.sh  docker-down-force.sh  init_admin.sh  migrate_images_to_minio.py
scripts/服务器部署脚本/: 01_backend_pack.sh  02_backend_deploy.sh  (+6 more)
src/: __init__.py
test/: test_audit.py  test_core.py  test_deepseek.py  test_full_flow.py
web/: auth.py  deps.py  main.py
(+26 files in other folders)
