[project]
name = "check-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx[socks]>=0.28.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.2",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "flower>=2.0.0",
    "gunicorn>=21.0.0",
    "minio>=7.2.9",
]
